[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/images/B_spritesnew.png" type="Texture" id=1]
[ext_resource path="res://scripts/player2.gd" type="Script" id=2]
[ext_resource path="res://Assets/images/forcefield.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sounds/powerUp.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sounds/swordslash.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 45.6274, 169 )

[sub_resource type="Animation" id=2]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "attack"
length = 0.28
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.17, 0.27 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 18.5361, 20.0245 )

[node name="player2" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -29.5877, 18.7898 )
scale = Vector2( 1.56024, 1.56024 )
texture = ExtResource( 1 )
hframes = 2
vframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -22.6274, 0 )
shape = SubResource( 1 )

[node name="idle" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )

[node name="walk" type="AnimationPlayer" parent="."]
anims/walk = SubResource( 3 )

[node name="attack" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 4 )

[node name="p2hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="p2hitbox"]
position = Vector2( -26.7269, 8.0181 )
shape = SubResource( 5 )

[node name="isuck" type="Timer" parent="."]

[node name="invinc" type="Timer" parent="."]
wait_time = 6.0

[node name="cooldown" type="Timer" parent="."]
wait_time = 0.15

[node name="delay" type="Timer" parent="."]
wait_time = 0.1

[node name="lastdelay" type="Timer" parent="."]
wait_time = 0.1

[node name="muzzle" type="Position2D" parent="."]
position = Vector2( -30.2906, -178.18 )

[node name="forcefield" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="invinc2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="slash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="animation_finished" from="attack" to="." method="_on_attack_animation_finished"]
[connection signal="area_entered" from="p2hitbox" to="." method="_on_p2hitbox_area_entered"]
[connection signal="timeout" from="isuck" to="." method="_on_isuck_timeout"]
[connection signal="timeout" from="invinc" to="." method="_on_invinc_timeout"]
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="delay" to="." method="_on_delay_timeout"]
[connection signal="timeout" from="lastdelay" to="." method="_on_lastdelay_timeout"]
